syntax = "proto3";

package trainer_v1;

import "google/protobuf/empty.proto";
//import "google/protobuf/wrappers.proto";
import "google/api/annotations.proto";
//import "google/protobuf/timestamp.proto";
//import "validate/validate.proto";
import "protoc-gen-openapiv2/options/annotations.proto";


option go_package = "github.com/kirillmc/trainings-server/pkg/trainer_v1;trainer_v1";

option(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info:{
    title:"Training SERVER TRAINER API",
    version:"1.0.0",
    contact:{
      name:"Telegram",
      email:"https://t.me/McK03"
    };
  };

  host:"localhost:8080",
  schemes:HTTP,
  schemes:HTTPS,
  consumes:"application/json",
  produces:"application/json",
};

service TrainerV1{
  rpc GetClientsPrograms(GetClientsProgramsRequest) returns (GetClientsProgramsResponse){// Тренеру получить список программ c клиентамами
    option(google.api.http) = {
      get: "/api/clients-programs/{trainer_id}"
    };
  }

  rpc GetProgramsWithTrainers(GetProgramsWithTrainersRequest) returns (GetProgramsWithTrainersResponse){// Клиенту получить список программ с тренером
    option(google.api.http) = {
      get: "/api/trainers-programs/{client_id}"
    };
  }

  rpc GetClientsToAllow(GetClientsToAllowRequest) returns (GetClientsToAllowResponse){// Получить список клиентов, ожидающих работы
    option(google.api.http) = {
      get: "/api/clients-to-allow/{trainer_id}"
    };
  }

  rpc GetTrainersToAllow(GetTrainersToAllowRequest) returns (GetTrainersToAllowResponse){// Получить список тренеров, предлагающих услуги
    option(google.api.http) = {
      get: "/api/trainers-to-allow/{client_id}"
    };
  }

  rpc SetProgramToClient(TrainerClientRequest) returns (google.protobuf.Empty){// Добавить программу клиенту
    option(google.api.http) = {
      patch: "/api/set-program-to-client/{client_id}"
      body:"*"
    };
  }

  rpc SendRequestToTrainer(TrainerClientRequest) returns (google.protobuf.Empty){// Отправить запрос тренеру от клиента
    option(google.api.http) = {
      post: "/api/request-to-trainer/{trainer_id}"
      body:"*"
    };
  }

  rpc SendRequestToClient(TrainerClientRequest) returns (google.protobuf.Empty){// Отправить запрос клиенту от тренера
    option(google.api.http) = {
      post: "/api/request-to-client/{trainer_id}"
      body:"*"
    };
  }

  rpc BlockTrainer(TrainerClientRequest) returns (google.protobuf.Empty){// Заблокировать тренера
    option(google.api.http) = {
      patch: "/api/block-trainer/{trainer_id}"
      body:"*"
    };
  }

  rpc BlockClient(TrainerClientRequest) returns (google.protobuf.Empty){// Заблокировать клиента
    option(google.api.http) = {
      patch: "/api/block-client/{client_id}"
      body:"*"
    };
  }



}

enum Status{
  UNKNOWN = 0;
  LOCAl = 1;
  MODERING = 2;
  PUBLIC = 3;
}

message ClientsTrainingProgram{
  int64 program_id = 1;
  int64 client_id= 2;
  string program_name = 3;
  string description = 4;
  Status status = 5;
}

message TrainersTrainingProgram{
  int64 program_id = 1;
  int64 trainer_id= 2;
  string program_name = 3;
  string description = 4;
  Status status = 5;
}

message GetClientsProgramsRequest{
  int64 trainer_id = 1;
}

message GetClientsProgramsResponse{
  repeated ClientsTrainingProgram clients_programs = 1;
}

message GetProgramsWithTrainersRequest{
  int64 client_id = 1;
}

message GetProgramsWithTrainersResponse{
  repeated TrainersTrainingProgram trainers_programs = 1;
}

message GetClientsToAllowRequest{
  int64 trainer_id = 1;
}

message GetTrainersToAllowRequest{
  int64 client_id = 1;
}

message GetClientsToAllowResponse{
  repeated int64 client_id = 1;
}

message GetTrainersToAllowResponse{
  repeated int64 trainer_id = 1;
}

message TrainerClientRequest{
  int64 trainer_id = 1;
  int64 client_id = 2;
  int64 program_id = 3;
}

